EmailLinks view added and exttra them comverters removed.

--- a/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
+++ b/src/main/webapp/Views/Secured/Entity/EntityView.xhtml
@@ -116,6 +116,12 @@ function adjustPositionning(sourceElement, dialog) {
 }
 </script>
 
+<style>
+.ui-dialog{
+	top: 40% !important
+
+}
+</style>
 			</ui:define>
 		</ui:composition>
 	</h:body>
