--- a/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
+++ b/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
@@ -11,8 +11,6 @@
 
 </h:head>
 
-<h:body>
-
 	<h:body>
 		<ui:composition template="/Views/Template/MainTemplate.xhtml">
 			<ui:define name="pageTitle">
@@ -143,14 +141,16 @@
 
 				</p:dialog>
 				
-				
+	<style>
+.ui-dialog{
+	top: 40% !important
+
+}
+</style>			
 				
 				
 			</ui:define>
 		</ui:composition>
 	</h:body>
-
-
-</h:body>
 
 </html>
