--- a/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
+++ b/src/main/webapp/Views/Secured/Practise/PractiseView.xhtml
@@ -160,6 +160,11 @@
 			<style>
 #practiseDialog {
 	position: absolute !important;
+	
+	.ui-dialog{
+	top: 40% !important
+
+}
 }
 </style>
 			<script type="text/javascript">
