--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -2,8 +2,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	>
+	xmlns:p="http://primefaces.org/ui">
 <h:head>
 
 	<f:metadata>
@@ -14,58 +13,59 @@
 
 
 
-	<h:body>
-		<ui:composition template="/Views/Template/MainTemplate.xhtml">
-			<ui:define name="pageTitle">
+<h:body>
+	<ui:composition template="/Views/Template/MainTemplate.xhtml">
+		<ui:define name="pageTitle">
             Welcome [Dashboard.xhtml]
             
         	</ui:define>
 
-			<ui:define name="mainContent">
+		<ui:define name="mainContent">
 			<!-- <h:outputScript library="primefaces" name="jquery/jquery.js"/> -->
+
+ 			<h2>Provider Details</h2>
+			<h:form rendered="#{providerController.canCreateProvider()}">
+				<p:commandButton value="Create" update=":myForm"
+					action="#{providerController.createProviderClicked()}"
+					oncomplete="PF('Dlg1').show();" />
+
+				<br />
+			</h:form>
+
+			<h:form id="mainForm">
 			
-				<h2>Provider Details</h2>
-				<h:form rendered="#{providerController.canCreateProvider()}">
-					<p:commandButton value="Create" update=":myForm"
-						action="#{providerController.createProviderClicked()}"
-						oncomplete="PF('Dlg1').show();" />
+				<p:dataTable value="#{providerController.providerList}"
+					var="provider">
 
-					<br />
-				</h:form>
-
-				<h:form id="mainForm">
-
-					<p:dataTable value="#{providerController.providerList}"
-						var="provider">
-
-<!-- 	<p:inputText value="#{providerController.providerSearchText}">
+						<p:inputText value="#{providerController.providerSearchText}">
 						<f:ajax event="change" listener="#{providerController.providerSearchTextChanged()}"></f:ajax>
-						</p:inputText> -->
-						<p:column headerText="Provider Name" filterMatchMode="contains" filterBy="#{provider.getFullName()}">
+						</p:inputText>
+					<p:column headerText="Provider Name" filterMatchMode="contains"
+						filterBy="#{provider.getFullName()}">
 					
 							#{provider.getFullName()}
 						</p:column>
 
-						<p:column headerText="Npi Number">
+					<p:column headerText="Npi Number">
 							#{provider.npiNum}
 						</p:column>
 
-						<p:column headerText="Entity">
+					<p:column headerText="Entity">
 							#{provider.centity.name}
 						</p:column>
 
-						<p:column headerText="Practices">
+					<p:column headerText="Practices">
 
-							<table>
-								<ui:repeat value="#{provider.practiceList.toArray()}" var="t">
-									<tr>
-										<td style="border: 0px;"><h:outputText value="#{t.name}" />
-										</td>
-									</tr>
-								</ui:repeat>
-							</table>
+						<table>
+							<ui:repeat value="#{provider.practiceList.toArray()}" var="t">
+								<tr>
+									<td style="border: 0px;"><h:outputText value="#{t.name}" />
+									</td>
+								</tr>
+							</ui:repeat>
+						</table>
 
-							<!-- 			         <p:selectOneMenu id="advanced"
+			<!-- 						         <p:selectOneMenu id="advanced"
 								 panelStyle="width:180px"
 								effect="fade" var="t" style="width:160px">
 								<f:selectItems value="#{provider.practiceList.toArray()}" var="practise"
@@ -77,109 +77,102 @@
 								
 							</p:selectOneMenu>  -->
 
-						</p:column>
+					</p:column>
 
 
-						<p:column headerText="Edit" width="80"
-							rendered="#{providerController.canEditProvider()}">
-							<!-- <p:commandButton icon="ui-icon-pencil" update=":myForm"
+					<p:column headerText="Edit" width="80"
+						rendered="#{providerController.canEditProvider()}">
+						<!-- <p:commandButton icon="ui-icon-pencil" update=":myForm"
 								oncomplete="PF('Dlg1').show();"
 								action="#{providerController.updateClicked(provider)}" /> -->
-								
-								<h:link value="Edit" outcome="#{providerController.moveToEditView(provider)}">
+
+							<h:link value="Edit " outcome="#{providerController.moveToEditView(provider)}">
 								
 								<f:param name="id" value="#{provider.id}" />
 								 </h:link>
-								<!-- <h:form target="_blank">
-									<p:commandButton icon="ui-icon-pencil"
-								action="#{providerController.moveToEditView(provider)}"/>
-								
-								</h:form> -->
-							
-							<p:commandButton icon="ui-icon-close" update=":mainForm"
-								resetValues="true"
-								action="#{providerController.removeClicked(provider)}"
-								rendered="#{providerController.shouldShowDelete()}">
-
-								<p:confirm header="Confirmation" message="Are you sure?"
-									icon="ui-icon-alert" />
-							</p:commandButton>
-
-							<p:confirmDialog global="true" showEffect="fade"
-								hideEffect="fade">
-								<p:commandButton value="Yes" type="button"
-									styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-								<p:commandButton value="No" type="button"
-									styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-							</p:confirmDialog>
-
-						</p:column>
-
-					</p:dataTable>
-
-				</h:form>
 
 
+						<p:commandButton icon="ui-icon-trash" update=":mainForm"
+							resetValues="true"
+							rendered="#{providerController.shouldShowDelete()}">
 
-				<!-- ADD / EDIT DIALOG -->
+							<p:confirm header="Confirmation" message="Are you sure?"
+								icon="ui-icon-alert" />
+						</p:commandButton>
 
-				<p:dialog id="providerDialog" header="Provider" modal="true"
-					position="top" widgetVar="Dlg1" minHeight="40">
+						<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+							<p:commandButton value="Yes" type="button"
+								styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+							<p:commandButton value="No" type="button"
+								styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+						</p:confirmDialog>
 
-					<h:form id="myForm">
-
-						<p:messages id="msgs" />
-
-						<h:panelGrid columns="2" cellpadding="8">
-
-							<p:outputLabel id="entity"
-								value="#{providerController.getFirstEntityName()}"
-								rendered="#{providerController.isSingleItemInEntityList()}" />
-
-							<p:selectOneMenu id="entities"
-								value="#{providerController.currentEntity}"
-								panelStyle="width:180px" effect="fade" required="true"
-								style="width:177px"
-								rendered="#{!providerController.isSingleItemInEntityList()}"
-								disabled="#{providerController.getIsEntityListDisabled()}">
-
-								<p:ajax listener="#{providerController.onEntityChange}"
-									update="myPractices" />
-
-								<f:selectItem itemLabel="Select Entity" />
-								<f:selectItems value="#{providerController.entityList}"
-									var="entity" itemLabel="#{entity.name}"
-									itemValue="#{entity.getId()}" />
-
-								<!-- <p:column>
-									<h:outputText value="#{t.name}" />
-								</p:column> -->
-							</p:selectOneMenu>
+					</p:column>
+					
+				</p:dataTable>
+				
+			</h:form>
 
 
-							<p:selectCheckboxMenu id="myPractices"
-								value="#{providerController.selectedPractices}"
-								label="Select Practices" filter="true"
-								filterMatchMode="startsWith" style="width:177px" var="t"
-								panelStyle="width:250px">
+			<!-- ADD / EDIT DIALOG -->
+ 
+			<p:dialog id="providerDialog" header="Provider" modal="true"
+				position="top" widgetVar="Dlg1" minHeight="40">
 
-								<f:selectItems value="#{providerController.practiceList}"
-									var="practice" itemLabel="#{practice.name}"
-									itemValue="#{practice.getId()}" />
+				<h:form id="myForm">
 
-								<!-- <p:column>
-									<h:outputText value="#{t.name}" />
-								</p:column> -->
+					<p:messages id="msgs" />
 
-							</p:selectCheckboxMenu>
+					<h:panelGrid columns="2" cellpadding="8">
+
+						<p:outputLabel id="entity"
+							value="#{providerController.getFirstEntityName()}"
+							rendered="#{providerController.isSingleItemInEntityList()}" />
+
+						<p:selectOneMenu id="entities"
+							value="#{providerController.currentEntity}"
+							panelStyle="width:180px" effect="fade" required="true"
+							style="width:177px"
+							rendered="#{!providerController.isSingleItemInEntityList()}"
+							disabled="#{providerController.getIsEntityListDisabled()}">
+
+							<p:ajax listener="#{providerController.onEntityChange}"
+								update="myPractices" />
+
+							<f:selectItem itemLabel="Select Entity" />
+							<f:selectItems value="#{providerController.entityList}"
+								var="entity" itemLabel="#{entity.name}"
+								itemValue="#{entity.getId()}" />
+
+							<p:column>
+								<h:outputText value="#{t.name}" />
+							</p:column>
+						</p:selectOneMenu>
 
 
-							<!-- <p:selectCheckboxMenu value="#{providerController.selectedPayers}" label="Select Payers"
+						<p:selectCheckboxMenu id="myPractices"
+							value="#{providerController.selectedPractices}"
+							label="Select Practices" filter="true"
+							filterMatchMode="startsWith" style="width:177px" var="t"
+							panelStyle="width:250px">
+
+							<f:selectItems value="#{providerController.practiceList}"
+								var="practice" itemLabel="#{practice.name}"
+								itemValue="#{practice.getId()}" />
+
+							<p:column>
+								<h:outputText value="#{t.name}" />
+							</p:column>
+
+						</p:selectCheckboxMenu>
+
+
+					<!-- 	<p:selectCheckboxMenu value="#{providerController.selectedPayers}" label="Select Payers"
 				            filter="false" filterMatchMode="startsWith" style="width:177px"  var="t" required="true"
-				            converter="payerConverter" panelStyle="width:250px">
+				            converter="javax.faces.Integer" panelStyle="width:250px">
 				            
 				            <f:selectItems value="#{providerController.payerList}" var="payer"
-								itemLabel="#{payer.name} #{payer.planName}" itemValue="#{payer}"  />
+								itemLabel="#{payer.name} #{payer.planName}" itemValue="#{payer.id}"  />
 
 							<p:column>
 								<h:outputText value="#{t.name}" />
@@ -187,89 +180,93 @@
 				            
 				        </p:selectCheckboxMenu>  -->
 
-							<p:inputText id="NpiNumber"
-								value="#{providerController.provider.npiNum}"
-								placeholder="Npi Number" maxlength="10" label="NPI"
-								required="true"
-								validatorMessage="NPI should only digits and length 10">
-								<!--  validator="npiValidator" -->
-								<f:validateRegex for="NpiNumber" pattern="[0-9]{10}" />
-								<!-- <f:convertNumber integerOnly="true"/> -->
+						<p:inputText id="NpiNumber"
+							value="#{providerController.provider.npiNum}"
+							placeholder="Npi Number" maxlength="10" label="NPI"
+							required="true"
+							validatorMessage="NPI should only digits and length 10">
 
-							</p:inputText>
-							<p:inputText value="#{providerController.provider.firstName}"
-								placeholder="First Name" label="FirstName" required="true" />
-							<p:inputText value="#{providerController.provider.lastName}"
-								placeholder="Last Name" label="Last Name" required="true" />
+							<f:validateRegex for="NpiNumber" pattern="[0-9]{10}" />
+								<f:convertNumber integerOnly="true"/>
 
-
-						</h:panelGrid>
+						</p:inputText>
+						<p:inputText value="#{providerController.provider.firstName}"
+							placeholder="First Name" label="FirstName" required="true" />
+						<p:inputText value="#{providerController.provider.lastName}"
+							placeholder="Last Name" label="Last Name" required="true" />
 
 
+					</h:panelGrid>
 
-						<br />
-						<h:dataTable id="filesTable"
-							value="#{providerController.documentCells}" var="docCell">
 
-							<p:column>
-								<p:row style="border: 3px solid blue;">
-								
+
+					<br />
+					<h:dataTable id="filesTable"
+						value="#{providerController.documentCells}" var="docCell">
+
+						<p:column>
+							<p:row style="border: 3px solid blue;">
+
 								<p:panelGrid>
 									<p:row>
 										<p:column>
-										<b><h:outputLabel for="fileUpload"
-											value="#{docCell.lbName}" styleClass="#{docCell.getColorClassName()}" /></b>
-									
+											<b><h:outputLabel for="fileUpload"
+													value="#{docCell.lbName}"
+													styleClass="#{docCell.getColorClassName()}" /></b>
+
 										</p:column>
-										
+
 										<p:column>
-										 
-										 <p:calendar id="cal" value="#{docCell.document.effectiveDate}" />
-										
+
+											<p:calendar id="cal"
+												value="#{docCell.document.effectiveDate}" />
+
 										</p:column>
 									</p:row>
-									
+
 									<p:row>
-									<p:column>
-										<h:outputLabel value="Existing File: " for="idFileName" styleClass="#{docCell.getColorClassName()}" />
-									
-									</p:column>
-									<p:column>
-										<h:outputLabel id="idFileName"
-										value="#{docCell.document.orignalName}" styleClass="#{docCell.getColorClassName()}" />
-									</p:column>
+										<p:column>
+											<h:outputLabel value="Existing File: " for="idFileName"
+												styleClass="#{docCell.getColorClassName()}" />
+
+										</p:column>
+										<p:column>
+											<h:outputLabel id="idFileName"
+												value="#{docCell.document.orignalName}"
+												styleClass="#{docCell.getColorClassName()}" />
+										</p:column>
 									</p:row>
-									
+
 									<p:row>
-									<p:column>
-									<p:fileUpload value="#{docCell.document.orignalName}"
-										fileUploadListener="#{providerController.handleFileUpload}"
-										mode="advanced" dragDropSupport="false" fileLimit="3"
-										sizeLimit="5242880" allowTypes="/(\.|\/)(pdf|doc?x|png|txt)$/"
-										update=":myForm" label="Browse..." 
-										>
+										<p:column>
+											<p:fileUpload value="#{docCell.document.orignalName}"
+												fileUploadListener="#{providerController.handleFileUpload}"
+												mode="advanced" dragDropSupport="false" fileLimit="3"
+												sizeLimit="5242880"
+												allowTypes="/(\.|\/)(pdf|doc?x|png|txt)$/" update=":myForm"
+												label="Browse...">
 
-										<f:attribute name="name" value="#{docCell}" />
+												<f:attribute name="name" value="#{docCell}" />
 
-									</p:fileUpload>
-									</p:column>
-									 </p:row>
+											</p:fileUpload>
+										</p:column>
+									</p:row>
 								</p:panelGrid>
-									
-									<br />
-									
-								</p:row>
-							</p:column>
 
-							<p:column headerText="Remove">
+								<br />
 
-								<p:commandButton icon="ui-icon-trash"
-									action="#{providerController.deleteFileClicked(docCell)}"
-									update=":myForm">
+							</p:row>
+						</p:column>
 
-									<p:confirm header="Confirmation" message="Are you sure?"
-										icon="ui-icon-alert" />
-								</p:commandButton>
+						<p:column headerText="Remove">
+
+							<p:commandButton icon="ui-icon-trash"
+								action="#{providerController.deleteFileClicked(docCell)}"
+								update=":myForm">
+
+								<p:confirm header="Confirmation" message="Are you sure?"
+									icon="ui-icon-alert" />
+							</p:commandButton>
 
 								<p:confirmDialog global="true" showEffect="fade"
 									hideEffect="fade">
@@ -279,40 +276,48 @@
 										styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 								</p:confirmDialog>
 
-							</p:column>
+						</p:column>
 
 
-						</h:dataTable>
+					</h:dataTable>
 
-						<p:commandButton id="btnSave" value="Save" validateClient="true"
-							actionListener="#{providerController.saveInfo}"
-							update="msgs, :mainForm" />
-
-
+					<p:commandButton id="btnSave" value="Save" validateClient="true"
+						actionListener="#{providerController.saveInfo}"
+						update="msgs, :mainForm" />
 
 
-						<p:blockUI trigger="myForm:btnSave" block="providerDialog">
+
+
+			 	<p:blockUI trigger="myForm:btnSave" block="providerDialog">
             LOADING<br />
-							<p:graphicImage value="/Images/loading.gif" width="75"
-								height="75" />
-						</p:blockUI>
-					</h:form>
+						<p:graphicImage value="/Images/loading.gif" width="75" height="75" />
+					</p:blockUI>
+				</h:form>
 
 
-				</p:dialog>
+			</p:dialog>
 
 
-				<style>
+			<style>
 #providerDialog {
 	position: absolute !important;
 }
 
-.red{color:red}
-.green{color:green}
+.red {
+	color: red
+}
+
+.green {
+	color: green
+}
+.ui-dialog{
+	top: 40% !important
+
+}
 </style>
-			</ui:define>
-		</ui:composition>
-	</h:body>
+		</ui:define>
+	</ui:composition>
+</h:body>
 
 
 
