--- a/src/main/webapp/Views/Template/MainTemplate.xhtml
+++ b/src/main/webapp/Views/Template/MainTemplate.xhtml
@@ -4,6 +4,7 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 
+<!-- <meta http-equiv="refresh" content="${pageContext.session.maxInactiveInterval};url=index.jsf"> </meta> -->
 <style>
 #footer {
    position:absolute;
