--- a/src/main/webapp/Views/Template/top.xhtml
+++ b/src/main/webapp/Views/Template/top.xhtml
@@ -11,9 +11,36 @@
 <h:body>
 	<ui:composition>
 
-		<!-- <div>
-			<h:graphicImage value="/Images/Sypore_Logo.jpg" width="130" />
-		</div> -->
+<script type="text/javascript">
+$( document ).ready(function(){
+
+	$(function() {
+	    $.ajaxSetup({
+	        error: function(jqXHR, exception) {
+	            if (jqXHR.status === 401) {
+	                alert('HTTP Error 401 Unauthorized.');
+	            } else {
+	                alert('Uncaught Error.\n' + jqXHR.responseText);
+	            }
+	        }
+	    });
+	});
+});
+/* $( document ).ajaxError(function( event, jqxhr, settings, thrownError ) {
+	console.log('event',event);
+	console.log('jqxhr',jqxhr);
+	console.log('settings',settings);
+	console.log('thrownError',thrownError);
+              if (request.status==403){
+                 //do whatever you wanted may be show a popup or just redirect
+                 alert('403');
+                 window.location = '#{request.contextPath}/';
+                 }
+                 });
+ */
+ </script>
+	
+	
 
 		<p:panelGrid columns="3" layout="grid">
 			<h:graphicImage value="/Images/Sypore_Logo.jpg" width="220" />
@@ -54,7 +81,7 @@
 				<!-- rendered="#{sec:areAnyGranted('ROLE_ROOT_ADMIN,ROLE_ROOT_USER,ROLE_ENTITY_ADMIN')}"  -->
 				<!-- rendered="#{userController.shouldShowCreateUser()}" -->
 				<p:menuitem value="Practice"
-					action="#{practiseController.viewPractise()}" />
+					action="#{practiseController.viewPractise()}"  />
 
 				<p:menuitem value="Entity" action="#{entityController.viewEntity()}"
 					rendered="#{sec:areAnyGranted('ROLE_ROOT_ADMIN,ROLE_ROOT_USER')}" />
