providers documents folders are not arranged by Id

--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -93,7 +93,7 @@
 
 
 						<p:commandButton icon="ui-icon-trash" update=":mainForm"
-							resetValues="true"
+							resetValues="true" actionListener="#{providerController.removeClicked(provider)}"
 							rendered="#{providerController.shouldShowDelete()}">
 
 							<p:confirm header="Confirmation" message="Are you sure?"
