--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -126,7 +126,7 @@
 				
 				<!-- ADD / EDIT DIALOG -->
 				
-				<p:dialog header="Transaction"  modal="true" position="top" widgetVar="Dlg1" minHeight="40">
+				<p:dialog id="transDialog" header="Transaction"  modal="true" position="top" widgetVar="Dlg1" minHeight="40">
 				    
 				  <h:form id="myForm">
 				  
@@ -256,16 +256,26 @@
 
 					<br />
 				  
-				  	<p:commandButton value="Save" action="#{transactionController.saveInfo()}"
+				  	<p:commandButton id="btnSave" value="Save" action="#{transactionController.saveInfo()}"
 				    		 update="myForm, msgs, :mainForm" />
+				
+							<p:blockUI trigger="myForm:btnSave" block="transDialog"
+						widgetVar="block">
+            LOADING<br />
+						<p:graphicImage value="/Images/loading.gif" width="75" height="75" />
+					</p:blockUI>
 					
 				  </h:form>
+
+		
 
 				</p:dialog>
 
 <style>
 .ui-dialog{
-	top: 40% !important
+	top: 10% !important;
+	position: absolute !important;
+	left: 15% !important;
 
 }
 
